Updated job title.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     					MIKE KAPLAN
     				</h1>
     				<h3>
-    					Technical Project Manager @ Akamai Technologies
+    					Security Customer Success Manager @ Akamai Technologies
     				</h3>
     				<p>
     					I'm a technophile by day and a fitness fanatic by night. To keep my 
