Updated index.html with new job and responsibilities.

--- a/index.html
+++ b/index.html
@@ -74,24 +74,27 @@
     					MIKE KAPLAN
     				</h1>
     				<h3>
-    					Security Customer Success Manager @ Akamai Technologies
+    					Team Lead<br>
+                        Americas Managed Security Services<br>
+                        @ Akamai Technologies
     				</h3>
     				<p>
     					I'm a technophile by day and a fitness fanatic by night. To keep my 
-                        technology hunger satisfied, I protect all North American accounts that 
-                        subscribe to Akamai's managed security service from modern web application 
-                        and Distributed Denial of Service (DDoS) attacks. At night, boxing at my 
-                        local gym keeps me in shape and at the top of my game. On the weekends, I 
-                        like to relax and unwind by playing guitar and listening to music.
+                        technology hunger satisfied, I lead Akamai's Americas Managed Security 
+                        Services team, while protecting Commerce and High Tech customers that 
+                        subscribe to our service from modern web application and Distributed Denial 
+                        of Service (DDoS) attacks. At night, boxing at my local gym keeps me in 
+                        shape and at the top of my game. On the weekends, I like to relax and 
+                        unwind by playing guitar and listening to music.
                         <br><br>
                         To get to where I am today, I graduated in 2008 from the University of
         				Pennsylvania's School of Engineering and Applied Sciences with a bachelor's
     					of science in electrical engineering and a minor in music. After working
     					in Philadelphia as a consultant for 2 years, I moved to San Francisco to
     					pursue a life in tech. In April of 2012, I undertook a new adventure by
-    					moving to Chicago. All has come full circle now as I just made my final 
-                        move in June of 2014 back to where it all started: New York. As a native, I 
-                        always knew I'd be back.
+    					moving to Chicago. All has come full circle now as I made my final move in 
+                        June of 2014 back to where it all started: New York. As a native, I always 
+                        knew I'd be back.
                         <br><br>
                         To learn more about my professional experience, my thoughts or my travels,
         				click the links at the top of the page.
