--- a/index_20170104.html
+++ b/index_20170104.html
@@ -74,17 +74,18 @@
     					MIKE KAPLAN
     				</h1>
     				<h3>
-    					Security Practice Manager<br>
+    					Team Lead<br>
                         Americas Managed Security Services<br>
                         @ Akamai Technologies
     				</h3>
     				<p>
     					I'm a technophile by day and a fitness fanatic by night. To keep my 
-                        technology hunger satisfied, I manage and grow Akamai's Americas Managed Security 
-                        Services team and business, which protects our customers from modern web application 
-                        and Distributed Denial of Service (DDoS) attacks. At night, boxing at my local gym 
-                        keeps me in shape and at the top of my game. On the weekends, I like to relax and 
-                        unwind by playing guitar, listening to music and brewing beer.
+                        technology hunger satisfied, I lead Akamai's Americas Managed Security 
+                        Services team, while protecting Commerce and High Tech customers that 
+                        subscribe to our service from modern web application and Distributed Denial 
+                        of Service (DDoS) attacks. At night, boxing at my local gym keeps me in 
+                        shape and at the top of my game. On the weekends, I like to relax and 
+                        unwind by playing guitar and listening to music.
                         <br><br>
                         To get to where I am today, I graduated in 2008 from the University of
         				Pennsylvania's School of Engineering and Applied Sciences with a bachelor's
